--- a/package.json
+++ b/package.json
@@ -10,15 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "@fortawesome/free-regular-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
     "bootstrap": "^5.3.8",
+    "i18next": "^25.7.3",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "lottie-react": "^2.4.1",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
+    "react-country-flag": "^3.1.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.2.0",
+    "react-hook-form": "^7.68.0",
+    "react-i18next": "^16.5.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.10.1"
   },
   "devDependencies": {
