--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-const API_BASE_URL = import.meta.env.VITE_API_BASE_URL || "https://api.transgateacd.com";
+VITE_API_BASE_URL=https://api.transgateacd.com
